trunk/Archive2/de/bcdc01acf9be15/output
main.cpp: In function 'int main()':
main.cpp:7:16: error: cannot convert 'std::nullptr_t' to 'GLuint {aka int}' in initialization
     GLuint a = nullptr;
                ^
main.cpp:7:12: warning: unused variable 'a' [-Wunused-variable]
     GLuint a = nullptr;
            ^
